style.css
/* ... */
#prj__documentation {
    background-image: url("https://github.com/elifaltundag/portfolio-website/blob/main/images/thumbnails/ss_on_screens/documentation_laptop.jpeg?raw=true");    
}


/*! -------------------- */
/*! CONSIDERATIONS       */
/*! -------------------- */
#considerations {
    background-color: hsl(var(--clr-dark));
    color: hsl(var(--clr-light));
}

.considerations {
    display: flex;
    flex-direction: column;
    row-gap: 2em;
}

.considerations h2,
.considerations h3 {
    color: hsl(var(--clr-accent-light));
}

.consd__container {
    display: flex;
    flex-direction: column;
    row-gap: 2em;
}

.consd__title {
    text-align: center;
}

/*! -------------------- */
/*! CONTACT              */
/*! -------------------- */
#contact {
    background-image: url("./images/contact/architecture_simple/andrei_bocan_xlarge_base.jpg");
    background-size: cover;
    background-position: left 30% center;
    background-repeat: no-repeat;
}

.contact {
    display: flex;
    flex-direction: column;
}

.section__subtitle__contact,
.contact-sharing__title {
    text-align: center;
}

.contact-sharing__subtitle {
    text-align: center;
}


/*! -------------------- */
/*! FORM                 */
/*! -------------------- */
.form__container {
    background-color: hsl(var(--clr-dark));
    color: hsl(var(--clr-accent-light));
    border-radius: var(--br-form);
    padding: 1.5em;
}

.contact__info {
    display: flex;
    flex-direction: column;
    margin: 1em 0;
}

label, input, textarea {
    resize: none;
}

input, textarea {
    outline: none;
    border: none;
    background-color: hsla(var(--clr-light), 0.1);
    color: hsl(var(--clr-light));
    padding: 0.25em;
    border-radius: var(--br-form-elm);
}

::placeholder {
    color: hsla(var(--clr-light), 0.6);
}

#submit-form {
    display: block;
    margin: 0 auto;
}


/*! -------------------- */
/*! FOOTER               */
/*! -------------------- */
footer {
    background-color: hsl(var(--clr-dark));
}

/*! -------------------- */
/*! BUTTONS              */
/*! -------------------- */
.btn {
    font-family: var(--ff-sans-serif);
    font-weight: 700;
    padding: 0.5em 1em;
    border-radius: var(--br-btn);
    overflow: hidden;
    cursor: pointer;
    margin-top: 1.5em;
    border: none;

    transform: scale(1);
    transition: transform 200ms ease;
}

@media screen and (hover) {
    .btn:hover {
        transform: scale(1.05);
    }
}


/*! -------------------- */
/*! MEDIA QUERIES        */
/*! -------------------- */
@media screen and (min-width: 750px) { /** Tablet */
    /** General */
    .hero,
    .projects__websites,
    .projects__js-apps,
    .consd__container {
        display: grid;
        grid-template-columns: repeat(var(--cols), 1fr);
        column-gap: 1vw;
    }

    .section__title {
        text-align: left;
        /* grid-column: 1 / 13; */
    }

    
    /** Hero */
    .hero {
        grid-template-rows: 1;
        grid-template-areas: "txt txt txt txt txt txt txt txt . img img img";
    }

    .hero__text {
        grid-area: txt;
    }

    .hero__photo {
        grid-area: img;
        display: block;
    }

    .img__container {
        height: 100%;
        border-radius: var(--br-photo);
        overflow: hidden;
    }

    .img__photo {
        height: 100%;
        object-fit: cover;
        object-position: 70%;
    }

    
    /** Projects */
    .projects {
        row-gap: 4rem;
    }

    .projects__title,
    .projects__body {
        text-align: left;
    }


    .projects__thmbs-container {
        display: grid;
        grid-template-columns: repeat(2, 1fr);
        grid-template-rows: repeat(2, 1fr);
        column-gap: 1vw;
        row-gap: 1vw;
    }

    .projects__websites {
        grid-template-rows: 1;
        grid-template-areas: "tmb tmb tmb tmb tmb tmb tmb tmb . txt txt txt";
    }

    /** Thumbnails */
    #thmbs__websites {
        grid-area: tmb;
    }

    #websites__text {
        grid-area: txt;
    }

    .projects__js-apps {
        grid-template-rows: 1;
        grid-template-areas: "txt txt txt . tmb tmb tmb tmb tmb tmb tmb tmb";
    }

    #thmbs__js-apps {
        grid-area: tmb;
    }

    #js-apps__text {
        grid-area: txt;
    }

    .thmb__prj {
        width: unset;
        margin: 0;

    }

    /** Considerations */
    .consd__container {
        grid-template-rows: 1fr;
        grid-template-areas: "idnt idnt idnt idnt accs accs accs accs resp resp resp resp";
        column-gap: 5vw;
    }

    #consd__responsiveness {
        grid-area: resp;
    }

    #consd__accessibility {
        grid-area: accs;
    }

    #consd__identity {
        grid-area: idnt;
    }

    /** Contact */
    .section__subtitle__contact {
        text-align: left;
    }
}

@media screen and (min-width: 900px) { /** Tablet */
    .contact {
        display: grid;
        grid-template-columns: 1fr minmax(50px, 10vw) 1fr;
        grid-template-rows: repeat(6, auto);
        grid-template-areas: 
            "title title title"
            "subtitle . form"
            ". . form"
            ". . form"
            "sharing-title . form"
            "sharing-subtitle . form";
    }

    .section__title__contact {
        grid-area: title;
    }

    .section__subtitle__contact {
        grid-area: subtitle;
    }

    .form__container {
        grid-area: form;
    }

    .contact-sharing__title {
        grid-area: sharing-title;
    }

    .contact-sharing__subtitle {
        grid-area: sharing-subtitle;
    }

    .section__subtitle__contact,
    .contact-sharing__title,
    .contact-sharing__subtitle {
        text-align: left;
    }


}

@media screen and (min-width: 1200px) { /** Laptop */
    .projects__thmbs-container {
        display: grid;
        grid-template-columns: repeat(4, 1fr);
        grid-template-rows: 1fr;
    }
}
/* ... */

